force-app/main/default/objects/msmxSheet__MsmxBook__c/msmxSheet__MsmxBook__c.object-meta.xml
<CustomObject>
    <label>Mashmatrixブック</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>