force-app/main/default/objects/msmxSheet__MsmxBook__c/fields/msmxSheet__Draft__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft</label>
    <type>Checkbox</type>
</CustomField>