force-app/main/default/objects/msmxSheet__MsmxBook__c/fields/msmxSheet__Folder__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>msmxSheet__MsmxFolder__c</referenceTo>
    <relationshipLabel>Mashmatrix Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>