force-app/main/default/objects/msmxSheet__MsmxBook__c/fields/msmxSheet__SharedToGroups__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__SharedToGroups__c</fullName>
    <label>Shared To Groups</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>