force-app/main/default/objects/msmxSheet__MsmxBook__c/fields/msmxSheet__VersionCount__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__VersionCount__c</fullName>
    <label>Version Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>