force-app/main/default/objects/msmxSheet__MsmxBook__c/listViews/msmxSheet__All.listView-meta.xml
<ListView>
    <fullName>msmxSheet__All</fullName>
    <columns>NAME</columns>
    <columns>msmxSheet__Folder__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>